--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@angular/router": "~12.1.1",
     "@capacitor/core": "3.1.2",
     "@ionic/angular": "^5.5.2",
+    "images-generator": "^3.2.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
+    "unique-names-generator": "^4.6.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
